修改資料庫操作code

--- a/資料庫操作/櫃買中心每日前30漲幅股票儲存/code.ipynb
+++ b/資料庫操作/櫃買中心每日前30漲幅股票儲存/code.ipynb
@@ -159,11 +159,11 @@
     "\n",
     "cursor = connection.cursor()\n",
     "\n",
-    "# 如果有括號這種特殊字元在 SQL 指令裡面，就要把指令用 \"\"\" \"\"\" 包起來，然後有括號的欄位就要用 ` ` 包起來，這樣才能查詢\n",
+    "# 如果有括號這種特殊字元在 SQL 指令裡面，就要把有括號的欄位用 ` ` 包起來，這樣才能查詢\n",
     "\n",
     "# 目前還找不到有百分比符號的解決方法，盡量就是資料庫欄位和這邊指令都不要出現\n",
     "\n",
-    "sql = \"\"\"INSERT INTO new_table_4 (`代號`,`名稱`,`收盤價(元)`,`上漲金額(元)`,`漲幅百分比`) VALUES (%s,%s,%s,%s,%s)\"\"\"\n",
+    "sql = \"INSERT INTO new_table_4 (代號,名稱,`收盤價(元)`,`上漲金額(元)`,漲幅百分比) VALUES (%s,%s,%s,%s,%s)\"\n",
     "\n",
     "try : \n",
     "\n",
