更新常用函數

--- a/基礎 python 語法練習/常見函數練習/code.ipynb
+++ b/基礎 python 語法練習/常見函數練習/code.ipynb
@@ -35,7 +35,8 @@
       "20250802,0001,20.3\n",
       "['ccc.csv']\n",
       "日期,證券代號,價格\n",
-      "20250801,a,20\n"
+      "20250801,a,20\n",
+      "['catiscute.txt', 'Tomiscat.txt']\n"
      ]
     }
    ],
@@ -187,6 +188,17 @@
     "\n",
     "print(join_text)\n",
     "\n",
+    "\n",
+    "\n",
+    "# 6. \"搜尋字串\" + in \"目標字串\" 的方法\n",
+    "\n",
+    "# 因為 python 的 string 沒有 has() 的函數，因此要用 in 來代替，或 count (回傳出現次數) / find (回傳出現字串索引位置)\n",
+    "\n",
+    "files = [\"catiscute.txt\",\"Tomiscat.txt\",\"Tomiscute.txt\"]\n",
+    "\n",
+    "new_files = [file for file in files if \"cat\" in file]\n",
+    "\n",
+    "print(new_files)\n",
     "\n",
     "\n"
    ]
