增加爬蟲部分轉 dataframe 流程

--- a/爬蟲/動態爬蟲 ( Selenium )/三大法人每日買賣超資料抓取/code.ipynb
+++ b/爬蟲/動態爬蟲 ( Selenium )/三大法人每日買賣超資料抓取/code.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "    all_file.append(new_dataframe)\n",
     "\n",
-    "# 把資料合成 dataframe 並作欄位和欄位資料型別調整\n",
+    "# 把 dataframe 的 list 資料合成 combine 的新 dataframe 並作欄位和欄位資料型別調整\n",
     "\n",
     "combine = pandas.concat(all_file)\n",
     "\n",
@@ -427,6 +427,193 @@
     "os.makedirs(download_path, exist_ok=True)\n",
     "\n",
     "download_series(5,assign_day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba4dc610",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             單位名稱         買賣差額          日期\n",
+      "0       自營商(自行買賣)    -46578231  2025-08-13\n",
+      "1         自營商(避險)   2923355813  2025-08-13\n",
+      "2              投信  -1088441511  2025-08-13\n",
+      "3  外資及陸資(不含外資自營商)   7092448861  2025-08-13\n",
+      "4           外資自營商            0  2025-08-13\n",
+      "5              合計   8880784932  2025-08-13\n",
+      "0       自營商(自行買賣)     34046489  2025-08-12\n",
+      "1         自營商(避險)    444592490  2025-08-12\n",
+      "2              投信    -61610845  2025-08-12\n",
+      "3  外資及陸資(不含外資自營商)  -5731106152  2025-08-12\n",
+      "4           外資自營商            0  2025-08-12\n",
+      "5              合計  -5314078018  2025-08-12\n",
+      "0       自營商(自行買賣)   2291157112  2025-08-11\n",
+      "1         自營商(避險)   1283339631  2025-08-11\n",
+      "2              投信    428896562  2025-08-11\n",
+      "3  外資及陸資(不含外資自營商)  -3985502559  2025-08-11\n",
+      "4           外資自營商            0  2025-08-11\n",
+      "5              合計     17890746  2025-08-11\n",
+      "0       自營商(自行買賣)   -164152695  2025-08-08\n",
+      "1         自營商(避險)   1456702410  2025-08-08\n",
+      "2              投信  -1861859628  2025-08-08\n",
+      "3  外資及陸資(不含外資自營商)  -3256238186  2025-08-08\n",
+      "4           外資自營商            0  2025-08-08\n",
+      "5              合計  -3825548099  2025-08-08\n",
+      "0       自營商(自行買賣)    441533492  2025-08-07\n",
+      "1         自營商(避險)   5077117037  2025-08-07\n",
+      "2              投信   1116606178  2025-08-07\n",
+      "3  外資及陸資(不含外資自營商)  43239484056  2025-08-07\n",
+      "4           外資自營商            0  2025-08-07\n",
+      "5              合計  49874740763  2025-08-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 抓完的資料不見得要儲存，可以直接給 pandas 做成 dataframe\n",
+    "\n",
+    "# 依照下面數字步驟重點來修改即可，主要就是抓到的資料 list 做 dataframe 時 column 要指定\n",
+    "\n",
+    "# ( 或直接用 pandas 讀取 csv 產生 dataframe , 或 csv.reader 讀取 csv 並做成資料 list 再做成 dataframe ) \n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions\n",
+    "from selenium.webdriver.support.ui import Select\n",
+    "from datetime import date , timedelta\n",
+    "import pandas\n",
+    "\n",
+    "driver = webdriver.Chrome()\n",
+    "\n",
+    "driver.get(\"https://www.twse.com.tw/zh/trading/foreign/bfi82u.html\")\n",
+    "\n",
+    "# 選擇日期的函數\n",
+    "\n",
+    "def select_date(date) : \n",
+    "\n",
+    "    select = driver.find_element(By.CLASS_NAME,\"selects\")\n",
+    "\n",
+    "    selects = select.find_elements(By.TAG_NAME,\"select\")\n",
+    "\n",
+    "    year_select = Select(selects[0])\n",
+    "        \n",
+    "    year_select.select_by_value(str(date.year))\n",
+    "\n",
+    "    month_select = Select(selects[1])\n",
+    "\n",
+    "    month_select.select_by_value(str(date.month))\n",
+    "\n",
+    "    day_select = Select(selects[2])\n",
+    "\n",
+    "    day_select.select_by_value(str(date.day))\n",
+    "\n",
+    "    submit = driver.find_element(By.CLASS_NAME,\"submit\")\n",
+    "\n",
+    "    search = submit.find_element(By.CLASS_NAME,\"search\")\n",
+    "\n",
+    "    search.click()\n",
+    "\n",
+    "# 抓取資料的函數\n",
+    "\n",
+    "def fetch_data() :\n",
+    "\n",
+    "    data = []\n",
+    "\n",
+    "    try : \n",
+    "\n",
+    "        wait = WebDriverWait(driver,5)\n",
+    "        wait.until(expected_conditions.visibility_of_element_located((By.TAG_NAME,\"table\")))\n",
+    "\n",
+    "        content = driver.find_element(By.TAG_NAME,\"table\")\n",
+    "\n",
+    "        rows = content.find_elements(By.TAG_NAME,\"tr\")\n",
+    "\n",
+    "        for row in rows : \n",
+    "\n",
+    "            th_rows = row.find_elements(By.TAG_NAME,\"th\")\n",
+    "\n",
+    "            if th_rows : \n",
+    "\n",
+    "                th_row = []\n",
+    "\n",
+    "                th_row = [th_cell.text for th_cell in th_rows]\n",
+    "\n",
+    "                data.append(th_row)\n",
+    "\n",
+    "            td_rows = row.find_elements(By.TAG_NAME,\"td\")\n",
+    "\n",
+    "            if td_rows : \n",
+    "\n",
+    "                td_row = []\n",
+    "\n",
+    "                td_row = [td_cell.text for td_cell in td_rows]\n",
+    "\n",
+    "                data.append(td_row)\n",
+    "\n",
+    "        return data\n",
+    "\n",
+    "    except : \n",
+    "\n",
+    "        return data\n",
+    "\n",
+    "def construct_series(Ndays,input_day) :\n",
+    "\n",
+    "    all_data = []\n",
+    "\n",
+    "    N = Ndays\n",
+    "\n",
+    "    download_time = 0\n",
+    "\n",
+    "    while download_time < N : \n",
+    "\n",
+    "        if input_day.weekday() < 5 : \n",
+    "\n",
+    "            select_date(input_day)\n",
+    "\n",
+    "            result = fetch_data()\n",
+    "\n",
+    "            if result == [] :\n",
+    "\n",
+    "                break\n",
+    "            \n",
+    "            # 1. 在迴圈函數裡面就加上 \n",
+    "\n",
+    "            # a. dataframe 的轉換，記得 column 要指定\n",
+    "            \n",
+    "            # b. all_data 的 list 來儲存不同天的 dataframe\n",
+    "\n",
+    "            result_column , *result_row = result\n",
+    "\n",
+    "            dataframe = pandas.DataFrame(result_row , columns=result_column)\n",
+    "\n",
+    "            dataframe = dataframe[[\"單位名稱\",\"買賣差額\"]]\n",
+    "\n",
+    "            dataframe[\"買賣差額\"] = pandas.to_numeric(dataframe[\"買賣差額\"].str.replace(\",\",\"\"))\n",
+    "\n",
+    "            dataframe[\"日期\"] = input_day\n",
+    "\n",
+    "            all_data.append(dataframe)\n",
+    "\n",
+    "            download_time += 1\n",
+    "\n",
+    "        input_day = input_day - timedelta(days=1)\n",
+    "\n",
+    "    return all_data\n",
+    "\n",
+    "assign_day = date.today()\n",
+    "\n",
+    "# 2. 最後直接回傳所有 dataframe 的 list , 再做 concat 即可\n",
+    "\n",
+    "series = construct_series(5,assign_day)\n",
+    "\n",
+    "combine = pandas.concat(series)\n",
+    "\n",
+    "print(combine)\n"
    ]
   }
  ],
