修改模組練習

--- a/python 模組使用練習/requests , io 模組.ipynb
+++ b/python 模組使用練習/requests , io 模組.ipynb
@@ -41,7 +41,9 @@
     "\n",
     "\n",
     "\n",
-    "# 2. 解析完之後因為是一群文字，需要再用 io 的 StringIO 模擬成文字檔案，這樣才能給 csv_reader 這類讀檔案的方法讀取，\n",
+    "# 2. 解析完之後因為是一群文字，需要再用 io 的 StringIO 模擬成文字檔案，這樣才能給 csv.reader 這類讀檔案的方法讀取 \n",
+    "\n",
+    "# ( 不然就是要用 open 函數開檔案同樣變成檔案物件，才能給 csv.reader 這類函數讀取 ) \n",
     "\n",
     "# 否則直接讀會變成 csv_reader 把字串當成 list 做 csv 方式的迭帶讀取，依照每個字元造訪，導致字串的一個一個字元就是一個 list\n",
     "\n",
