新增OLS迴歸程式碼

--- a/機器學習/Gradient Descend 演算法/code.ipynb
+++ b/機器學習/Gradient Descend 演算法/code.ipynb
@@ -20,7 +20,7 @@
     }
    ],
    "source": [
-    "# 用實際的 ( x , y ) 配合線性回歸和梯度來求解 Gradient Descend 演算法，不用模組\n",
+    "# 用實際的 ( x , y ) 配合 Gradient Descend 演算法來求解迴歸，不用模組\n",
     "\n",
     "\n",
     "import numpy\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "id": "a792c04a",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a參數 = [[2.02861361]] , b參數 = [0.98575846] , 模型分數為 0.9908881362880348\n"
+      "a參數 = [[1.89057145]] , b參數 = [1.50187258] , 模型 R square 為 0.9937832526172294\n"
      ]
     }
    ],
@@ -154,7 +154,165 @@
     "\n",
     "# 4. 產出結果\n",
     "\n",
-    "print(f\"a參數 = {model.coef_} , b參數 = {model.intercept_} , 模型分數為 {model.score(x_test,y_test)}\")\n",
+    "print(f\"a參數 = {model.coef_} , b參數 = {model.intercept_} , 模型 R square 為 {model.score(x_test,y_test)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "65601741",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.571\n",
+      "Model:                            OLS   Adj. R-squared:                  0.476\n",
+      "Method:                 Least Squares   F-statistic:                     5.988\n",
+      "Date:                Sun, 17 Aug 2025   Prob (F-statistic):             0.0222\n",
+      "Time:                        08:38:06   Log-Likelihood:                -62.836\n",
+      "No. Observations:                  12   AIC:                             131.7\n",
+      "Df Residuals:                       9   BIC:                             133.1\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        591.2658   1726.740      0.342      0.740   -3314.892    4497.424\n",
+      "x1             0.5508      0.315      1.749      0.114      -0.162       1.263\n",
+      "x2             0.3579      0.356      1.006      0.341      -0.447       1.163\n",
+      "==============================================================================\n",
+      "Omnibus:                       10.098   Durbin-Watson:                   1.781\n",
+      "Prob(Omnibus):                  0.006   Jarque-Bera (JB):                5.221\n",
+      "Skew:                          -1.359   Prob(JB):                       0.0735\n",
+      "Kurtosis:                       4.747   Cond. No.                     1.02e+06\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 1.02e+06. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "[0.55077892 0.35794511] 591.2658321570743\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:430: UserWarning: `kurtosistest` p-value may be inaccurate with fewer than 20 observations; only n=12 observations were given.\n",
+      "  return hypotest_fun_in(*args, **kwds)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (12,3) and (8,2) not aligned: 3 (dim 1) != 8 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 83\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;66;03m# 5. 做樣本外 R square 測試 , OLS 只能用 scikit learn 的 r2_score 來算配適程度\u001b[39;00m\n\u001b[0;32m     81\u001b[0m x_test_set \u001b[38;5;241m=\u001b[39m add_constant(x_test_data)\n\u001b[1;32m---> 83\u001b[0m y_prediction \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(x_test_data)\n\u001b[0;32m     85\u001b[0m \u001b[38;5;28mprint\u001b[39m(y_prediction)\n\u001b[0;32m     87\u001b[0m \u001b[38;5;28mprint\u001b[39m(r2_score(y_test))\n",
+      "File \u001b[1;32mc:\\Users\\zxzxa\\anaconda3\\Lib\\site-packages\\statsmodels\\regression\\linear_model.py:409\u001b[0m, in \u001b[0;36mRegressionModel.predict\u001b[1;34m(self, params, exog)\u001b[0m\n\u001b[0;32m    406\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m exog \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    407\u001b[0m     exog \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexog\n\u001b[1;32m--> 409\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mdot(exog, params)\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (12,3) and (8,2) not aligned: 3 (dim 1) != 8 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "# 改用時間序列資料以及 statsmodels 來做 OLS 迴歸，並產生 p-value 和 F 指標來判斷模型好壞\n",
+    "\n",
+    "\n",
+    "import numpy\n",
+    "from statsmodels.api import add_constant , OLS\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "\n",
+    "# 1. 先載入股價資料\n",
+    "\n",
+    "stock_price = numpy.array([6449.80,6468.54,6466.58,6445.76,6373.45,6389.45,6340.00,6345.06,6299.19,6329.94,6238.01,6339.39,6362.90,6370.86,6389.77,6388.64,6363.35,6358.91,6309.62,6305.60,6296.79,6297.36,6263.70,6243.76])\n",
+    "\n",
+    "\n",
+    "# 2. 做出時間序列的訓練和測試資料集，為今天和前幾天的資料作為解釋變數\n",
+    "\n",
+    "# a.先區分訓練集和測試集\n",
+    "\n",
+    "# 算 array 的元素總數可以先做成切片再來計算，不然只能算一維的\n",
+    "\n",
+    "N = len(stock_price)\n",
+    "stock_price_train = stock_price[:int(numpy.floor(N*0.6)),]\n",
+    "stock_price_test = stock_price[int(numpy.floor(N*0.6)):,]\n",
+    "\n",
+    "# b. 再做成變數資料\n",
+    "\n",
+    "y_train = []\n",
+    "X_1_train = []\n",
+    "X_2_train = []\n",
+    "\n",
+    "N_train = len(stock_price_train)\n",
+    "\n",
+    "for i in range(N_train-2) : \n",
+    "\n",
+    "    y_train.append(stock_price_train[i])\n",
+    "    X_1_train.append(stock_price_train[i+1])\n",
+    "    X_2_train.append(stock_price_train[i+2])\n",
+    "\n",
+    "y_test = []\n",
+    "X_1_test = []\n",
+    "X_2_test = []\n",
+    "\n",
+    "N_test = len(stock_price_test)\n",
+    "\n",
+    "for i in range(N_test-2) : \n",
+    "\n",
+    "    y_test.append(stock_price_train[i])\n",
+    "    X_1_test.append(stock_price_train[i+1])\n",
+    "    X_2_test.append(stock_price_train[i+2])\n",
+    "\n",
+    "\n",
+    "# 3. 把資料合併並加上常數項\n",
+    "\n",
+    "# stack 的資料來源可以是 list，做完就轉成 numpy array\n",
+    "\n",
+    "# axis = 0 是往 x 軸展開，基本上就是 append，也可以看做一列一列增加原陣列\n",
+    "\n",
+    "# axis = 1 or -1 是往 y 軸展開，這個比較特別，會變成欄和列互換，就是 x 軸展開後再做矩陣反轉，陣列的大小會改變\n",
+    "\n",
+    "x_train_data = numpy.stack((X_1_train,X_2_train),axis=-1)\n",
+    "\n",
+    "x_train_set = add_constant(x_train_data)\n",
+    "\n",
+    "x_test_data = numpy.stack((X_1_test,X_2_test),axis=-1)\n",
+    "\n",
+    "\n",
+    "# 4. 做 OLS 回歸 , 結果和 scikit learn 一樣\n",
+    "\n",
+    "model = OLS(y_train,x_train_set)\n",
+    "result = model.fit()\n",
+    "\n",
+    "model_2 = LinearRegression()\n",
+    "model_2.fit(x_train_data,y_train)\n",
+    "\n",
+    "print(result.summary())\n",
+    "print(model_2.coef_,model_2.intercept_)\n",
+    "\n",
+    "\n",
+    "# 5. 做樣本外 R square 測試 , OLS 只能用 scikit learn 的 r2_score 來算配適程度\n",
+    "\n",
+    "x_test_set = add_constant(x_test_data)\n",
+    "\n",
+    "y_prediction = model.predict(x_test_data)\n",
+    "\n",
+    "print(y_prediction)\n",
+    "\n",
+    "print(r2_score(y_test))\n",
+    "\n",
+    "print(model_2.score(x_test_data,y_test))\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
