增加 matplotlib 模組筆記

--- a/python 模組使用練習/Matplotlib 模組.ipynb
+++ b/python 模組使用練習/Matplotlib 模組.ipynb
@@ -37,6 +37,8 @@
     "\n",
     "# b. 引入 x , y 軸資料 , 想要多筆資料在同一張圖上就做多次\n",
     "\n",
+    "# Matplotlib 可以吃的資料就是最簡單的 list , 或者是 pandas dataframe 或 numpy array , 要注意是欄位底下的所有資料 , 而不是一筆一筆資料列\n",
+    "\n",
     "# ( 其他可調參數 : marker 是點的樣式，markersize 是點的大小，linewidth 是線的粗度 )\n",
     "\n",
     "plt.plot(months,attendance_1,label=\"出席率_1\",marker=\"o\",markersize=6,linewidth=2)\n",
