增加 numpy 模組筆記

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "a5e1b635",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,10 @@
       "[1 3 5]\n",
       "[[1 2 3]\n",
       " [4 5 6]]\n",
+      "[1 2 3]\n",
+      "[2 4 6]\n",
+      "[[1 2]\n",
+      " [4 5]]\n",
       "[0 1 2 3 4]\n",
       "[[1 2]\n",
       " [3 4]\n",
@@ -41,8 +45,14 @@
       " [[ 7  8  9]\n",
       "  [10 11 12]]]\n",
       "(array([3, 4]),)\n",
+      "[30 40]\n",
+      "(array([0, 1, 1]), array([4, 3, 4]))\n",
+      "[40 35 45]\n",
       "[False False False  True  True]\n",
-      "[30 40]\n"
+      "[30 40]\n",
+      "[[False  True  True]\n",
+      " [ True  True  True]]\n",
+      "[2 3 4 5 6]\n"
      ]
     }
    ],
@@ -115,6 +125,33 @@
     "# 和 dataframe 的 loc 使用類似，只是 array 可以直接操作，不用函數，就是 [ a:b , c:d ]，a:b 是列，c:d 是欄位\n",
     "\n",
     "print(array_2[0:2,0:3])\n",
+    "\n",
+    "\n",
+    "# c. 進階索引\n",
+    "\n",
+    "# 可以用索引陣列來對應相對應維度的陣列來呼叫元素，會回傳符合條件的值的一維陣列\n",
+    "\n",
+    "# 這個方法比較常被 numpy 的 where() 函數使用，因為會回傳索引陣列，需要用它來找元素\n",
+    "\n",
+    "# 一維 : \n",
+    "\n",
+    "# 一個 array 即可，因為是一維\n",
+    "\n",
+    "print( array[ numpy.array([0,1,2]) ] )\n",
+    "\n",
+    "# 二維 : \n",
+    "\n",
+    "# 兩個 array 來代表 row 和 column 的索引，因為是二維，多維就要多個 indices array\n",
+    "\n",
+    "# 然後 array 長度要一樣，因為這樣所有索引才能產生相對應維度座標\n",
+    "\n",
+    "print( array_2[ numpy.array([0,1,1]) , numpy.array([1,0,2]) ] )\n",
+    "\n",
+    "# 二維以上可以用切片的冒號來代表一個維度，表示那一個維度的所有元素，直接讓另一個維度來對應，是不同長度的，會產生 i * j 結果\n",
+    "\n",
+    "# 基本上就是降維，只剩另一個維度來挑選哪些行或哪些列\n",
+    "\n",
+    "print( array_2[ : , numpy.array([0,1]) ] )\n",
     "\n",
     "\n",
     "\n",
@@ -204,32 +241,70 @@
     "\n",
     "# a. 直接用 where() 函數\n",
     "\n",
+    "# 一維 : \n",
+    "\n",
     "array_13 = numpy.array([0,10,20,30,40])\n",
     "\n",
     "array_14 = numpy.where(array_13>25)\n",
     "\n",
-    "# 會回傳一個 tuple 包著含有索引的 array，不會直接傳值回來\n",
-    "\n",
     "print(array_14)\n",
+    "\n",
+    "# 會回傳一個 tuple 包著含有索引的 array，不會直接傳值回來，但可以用 numpy array 的進階索引來找符合的值\n",
+    "\n",
+    "array_15 = array_13[array_14]\n",
+    "\n",
+    "print(array_15)\n",
+    "\n",
+    "# 二維 : \n",
+    "\n",
+    "array_16 = numpy.array([[0,10,20,30,40],[5,15,25,35,45]])\n",
+    "\n",
+    "array_17 = numpy.where(array_16>33)\n",
+    "\n",
+    "# 二維會回傳一個 tuple 包著兩個分別是 row 和 column 索引的 array，一定是兩個或多個長度一樣的 array，這樣才能有對應維度的座標\n",
+    "\n",
+    "print(array_17)\n",
+    "\n",
+    "# 放到 array 的進階索引就會自動把 row 和 column 兩個 indices array 對應成 (a,b) , (c,d) , (e,f) ... 的矩陣位置來找值\n",
+    "\n",
+    "array_18 = array_16[array_17]\n",
+    "\n",
+    "print(array_18)\n",
     "\n",
     "\n",
     "# b. 用布林陣列來篩選\n",
+    "\n",
+    "# 一維 : \n",
     "\n",
     "# 先產生一個布林陣列\n",
     "\n",
     "# ( array 是 array > ... 陣列配合條件產生布林陣列，跟 dataframe 很像，dataframe 也是 dataframe[\" \"] > ... 欄位配合條件來產生布林陣列 )\n",
     "\n",
-    "array_15 = numpy.array(array_13>25)\n",
+    "array_19 = numpy.array(array_13>25)\n",
     "\n",
-    "print(array_15)\n",
+    "print(array_19)\n",
     "\n",
     "# 再套用在要篩選的陣列，就能篩選出符合條件的元素 \n",
     "\n",
     "# ( array 是把條件放在 [ ] 裡面，就像 dataframe 的 [ ] 裡面放布林陣列來挑選資料 )\n",
     "\n",
-    "array_16 = array_13[array_15]\n",
+    "array_20 = array_13[array_19]\n",
     "\n",
-    "print(array_16)\n",
+    "print(array_20)\n",
+    "\n",
+    "# 二維 : \n",
+    "\n",
+    "# 就是布林陣列變成比較陣列的一樣維度而已\n",
+    "\n",
+    "array_21 = numpy.array(array_2>1)\n",
+    "\n",
+    "print(array_21)\n",
+    "\n",
+    "# 回傳變成一個符合條件值的一維陣列\n",
+    "\n",
+    "array_22 = array_2[array_21]\n",
+    "\n",
+    "print(array_22)\n",
     "\n"
    ]
   }
