增加 numpy 模組筆記內容

--- a/python 模組使用練習/numpy 模組.ipynb
+++ b/python 模組使用練習/numpy 模組.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "a5e1b635",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,8 @@
       "[1 3 5]\n",
       "[[1 2 3]\n",
       " [4 5 6]]\n",
+      "[[1 3]\n",
+      " [4 6]]\n",
       "[1 2 3]\n",
       "[2 4 6]\n",
       "[[1 2]\n",
@@ -116,7 +118,7 @@
     "\n",
     "# 一維 array \n",
     "\n",
-    "# 和 list 一模一樣 , 就是 \" 開始元素 : 結束元素 : 跳幾個 \"\n",
+    "# 和 list 一模一樣 , 就是 \" 開始元素 : 結束元素 ( 不含該元素 ) : 跳幾個 \"\n",
     "\n",
     "print(array[0:5:2])\n",
     "\n",
@@ -125,6 +127,10 @@
     "# 和 dataframe 的 loc 使用類似，只是 array 可以直接操作，不用函數，就是 [ a:b , c:d ]，a:b 是列，c:d 是欄位\n",
     "\n",
     "print(array_2[0:2,0:3])\n",
+    "\n",
+    "# 切片也可以用 list 來表達要選擇哪一部分，和 dataframe 的 [[\"...\",\"...\"]] 裡面可以放 list 來挑選欄位一樣\n",
+    "\n",
+    "print(array_2[0:2,[0,2]])\n",
     "\n",
     "\n",
     "# c. 進階索引\n",
@@ -152,6 +158,13 @@
     "# 基本上就是降維，只剩另一個維度來挑選哪些行或哪些列\n",
     "\n",
     "print( array_2[ : , numpy.array([0,1]) ] )\n",
+    "\n",
+    "\n",
+    "# d. 賦值\n",
+    "\n",
+    "# numpy array 和 list 一樣，只要能用前面 a , b , c 方法篩選到，基本上都可以直接賦值\n",
+    "\n",
+    "# ex. array[0] = 1 , array[0:1] = 2 , array[[True,True,False]] = 2 , array[numpy.array([0,1])] = 2\n",
     "\n",
     "\n",
     "\n",
@@ -208,7 +221,9 @@
     "\n",
     "print(array_8)\n",
     "\n",
-    "    # dataframe 的 concatenate ( 二維合併，也是在二維擴展，所以在二維就是表示 list 增加，或者說 dataframe 的增加列，就是 [ [...] , [...] ] 不同日期合併的那個例子 )\n",
+    "    # dataframe 的 concatenate ( 二維合併，也是在二維擴展，所以在二維就是表示 list 增加，或者說 dataframe 的增加列，\n",
+    "    \n",
+    "    # 可以參考 dataframe [ [...] , [...] ] 不同日期合併的那個例子，dataframe 的 concatenate 也是同一維度合併，所以不同日期的二維 dataframe 合併後還是同樣二維的 dataframe )\n",
     "\n",
     "array_9 = numpy.array([[7,8,9],[10,11,12]])\n",
     "\n",
