--- a/python 模組使用練習/PyMySQL 模組.ipynb
+++ b/python 模組使用練習/PyMySQL 模組.ipynb
@@ -321,6 +321,98 @@
     "print(results)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23ad96b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Seq    年度 國小補校校數 國中補校校數 高級中等學校進修部校數 國小補校班級數 國中補校班級數 高級中等學校進修部班級數\n",
+      "0   1  2017     15     24          17      23      44          172\n",
+      "1   2  2018     15     23          17      22      43          165\n",
+      "2   3  2019     16     22          17      24      36          155\n",
+      "3   4  2020     15     20          15      23      35          133\n",
+      "4   5  2021     15     17          15      23      32          128\n",
+      "5   6  2022     14     16          14      20      29          120\n",
+      "6   7  2023     13     16          14      20      29          114\n",
+      "7   8  2024     13     16          14      18      28          105\n",
+      "['Seq', '年度', '國小補校校數', '國中補校校數', '高級中等學校進修部校數', '國小補校班級數', '國中補校班級數', '高級中等學校進修部班級數']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zxzxa\\AppData\\Local\\Temp\\ipykernel_11448\\2188895892.py:23: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  result = pandas.read_sql(sql,connection)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# PyMySQL 其他技巧\n",
+    "\n",
+    "\n",
+    "# 1. 讀取的檔案可以直接用 pandas 轉成 dataframe，方便拿來分析或畫圖\n",
+    "\n",
+    "import pymysql\n",
+    "import pandas\n",
+    "\n",
+    "connection = pymysql.connect(\n",
+    "\n",
+    "    host=\"127.0.0.1\",\n",
+    "    user=\"root\",\n",
+    "    database=\"example\",\n",
+    "    password=\"12345\",\n",
+    "    charset=\"utf8\"\n",
+    "\n",
+    ")\n",
+    "\n",
+    "# 可以直接用 pandas.read_sql 來抓取資料，不用 cursor\n",
+    "\n",
+    "sql = \"SELECT * FROM new_table_2\"\n",
+    "\n",
+    "result = pandas.read_sql(sql,connection)\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "\n",
+    "# 2. 一般使用 cursor 情況下讀取 MySQL 把欄位名稱也讀取出來的方法\n",
+    "\n",
+    "connection = pymysql.connect(\n",
+    "\n",
+    "    host=\"127.0.0.1\",\n",
+    "    user=\"root\",\n",
+    "    database=\"example\",\n",
+    "    password=\"12345\",\n",
+    "    charset=\"utf8\"\n",
+    "\n",
+    ")\n",
+    "\n",
+    "cursor = connection.cursor()\n",
+    "\n",
+    "sql = \"SELECT * FROM new_table_2\"\n",
+    "\n",
+    "cursor.execute(sql)\n",
+    "\n",
+    "# cursor 在 execute 之後會順便儲存每個欄位的資訊，可以用 description 的屬性來找出來，\n",
+    "\n",
+    "# 因為是 list of tuple 的形式儲存，每一個 tuple 儲存了欄位的相關資訊，\n",
+    "\n",
+    "# 而欄位名稱都在第一個位置，所以要用 description[0] 還有迴圈來得到欄位的 list\n",
+    "\n",
+    "columns = [item[0] for item in cursor.description]\n",
+    "\n",
+    "print(columns)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
