新增 pandas 模組筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -643,6 +643,99 @@
     "print(pivot_loc_multi)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c95b46a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Seq', '年度', '國小補校校數', '國中補校校數', '高級中等學校進修部校數', '國小補校班級數', '國中補校班級數', '高級中等學校進修部班級數']\n",
+      "[array(['1', '2017', '15', '24', '17', '23', '44', '172'], dtype=object), array(['2', '2018', '15', '23', '17', '22', '43', '165'], dtype=object), array(['3', '2019', '16', '22', '17', '24', '36', '155'], dtype=object), array(['4', '2020', '15', '20', '15', '23', '35', '133'], dtype=object), array(['5', '2021', '15', '17', '15', '23', '32', '128'], dtype=object), array(['6', '2022', '14', '16', '14', '20', '29', '120'], dtype=object), array(['7', '2023', '13', '16', '14', '20', '29', '114'], dtype=object), array(['8', '2024', '13', '16', '14', '18', '28', '105'], dtype=object)]\n",
+      "['1', '2017', '15', '24', '17', '23', '44', '172']\n",
+      "['2', '2018', '15', '23', '17', '22', '43', '165']\n",
+      "['3', '2019', '16', '22', '17', '24', '36', '155']\n",
+      "['4', '2020', '15', '20', '15', '23', '35', '133']\n",
+      "['5', '2021', '15', '17', '15', '23', '32', '128']\n",
+      "['6', '2022', '14', '16', '14', '20', '29', '120']\n",
+      "['7', '2023', '13', '16', '14', '20', '29', '114']\n",
+      "['8', '2024', '13', '16', '14', '18', '28', '105']\n",
+      "  Seq    年度 國小補校校數 國中補校校數 高級中等學校進修部校數 國小補校班級數 國中補校班級數 高級中等學校進修部班級數\n",
+      "0   1  2017     15     24          17      23      44          172\n",
+      "1   2  2018     15     23          17      22      43          165\n",
+      "2   3  2019     16     22          17      24      36          155\n",
+      "3   4  2020     15     20          15      23      35          133\n",
+      "4   5  2021     15     17          15      23      32          128\n",
+      "5   6  2022     14     16          14      20      29          120\n",
+      "6   7  2023     13     16          14      20      29          114\n",
+      "7   8  2024     13     16          14      18      28          105\n",
+      "[['1' '2017' '15' '24' '17' '23' '44' '172']\n",
+      " ['2' '2018' '15' '23' '17' '22' '43' '165']\n",
+      " ['3' '2019' '16' '22' '17' '24' '36' '155']\n",
+      " ['4' '2020' '15' '20' '15' '23' '35' '133']\n",
+      " ['5' '2021' '15' '17' '15' '23' '32' '128']\n",
+      " ['6' '2022' '14' '16' '14' '20' '29' '120']\n",
+      " ['7' '2023' '13' '16' '14' '20' '29' '114']\n",
+      " ['8' '2024' '13' '16' '14' '18' '28' '105']]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zxzxa\\AppData\\Local\\Temp\\ipykernel_13736\\3199896981.py:25: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  result = pandas.read_sql(sql,connection)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pandas 其他技巧\n",
+    "\n",
+    "\n",
+    "# 1. dataframe 和 pivot 一樣都是 dataframe , 只是行和列定義不太一樣，但都有 dataframe.index , dataframe.columns , dataframe.values \n",
+    "\n",
+    "# 可以對 dataframe.columns 和 dataframe.values 做 list , 就能得到欄位名稱和資料的 list \n",
+    "\n",
+    "# ( dataframe 的 dataframe.index 就只是索引，沒甚麼用，pivot 是另一個欄位來當索引，所以 pivot 用 pivot.index 比較有用 )\n",
+    "\n",
+    "import pymysql\n",
+    "import pandas\n",
+    "\n",
+    "connection = pymysql.connect(\n",
+    "\n",
+    "    host=\"127.0.0.1\",\n",
+    "    user=\"root\",\n",
+    "    database=\"example\",\n",
+    "    password=\"12345\",\n",
+    "    charset=\"utf8\"\n",
+    "\n",
+    ")\n",
+    "\n",
+    "sql = \"SELECT * FROM new_table_2\"\n",
+    "\n",
+    "result = pandas.read_sql(sql,connection)\n",
+    "\n",
+    "print(list(result.columns))\n",
+    "\n",
+    "print(list(result.values))\n",
+    "\n",
+    "\n",
+    "# 2. dataframe 可以用 dataframe.to_numpy 轉成 numpy，有些使用場合會比較方便\n",
+    "\n",
+    "# result 原本是 dataframe\n",
+    "\n",
+    "print(result)\n",
+    "\n",
+    "# 用 dataframe.to_numpy 轉成 numpy，但是 numpy array 沒有 column 和 row label，所以欄位名稱和列索引會不見\n",
+    "\n",
+    "result_2 = result.to_numpy()\n",
+    "\n",
+    "print(result_2)\n"
+   ]
   }
  ],
  "metadata": {
