--- a/python 模組使用練習/PyMySQL 模組.ipynb
+++ b/python 模組使用練習/PyMySQL 模組.ipynb
@@ -341,6 +341,8 @@
       "5   6  2022     14     16          14      20      29          120\n",
       "6   7  2023     13     16          14      20      29          114\n",
       "7   8  2024     13     16          14      18      28          105\n",
+      "['Seq', '年度', '國小補校校數', '國中補校校數', '高級中等學校進修部校數', '國小補校班級數', '國中補校班級數', '高級中等學校進修部班級數']\n",
+      "[array(['1', '2017', '15', '24', '17', '23', '44', '172'], dtype=object), array(['2', '2018', '15', '23', '17', '22', '43', '165'], dtype=object), array(['3', '2019', '16', '22', '17', '24', '36', '155'], dtype=object), array(['4', '2020', '15', '20', '15', '23', '35', '133'], dtype=object), array(['5', '2021', '15', '17', '15', '23', '32', '128'], dtype=object), array(['6', '2022', '14', '16', '14', '20', '29', '120'], dtype=object), array(['7', '2023', '13', '16', '14', '20', '29', '114'], dtype=object), array(['8', '2024', '13', '16', '14', '18', '28', '105'], dtype=object)]\n",
       "['Seq', '年度', '國小補校校數', '國中補校校數', '高級中等學校進修部校數', '國小補校班級數', '國中補校班級數', '高級中等學校進修部班級數']\n"
      ]
     },
@@ -348,7 +350,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\zxzxa\\AppData\\Local\\Temp\\ipykernel_11448\\2188895892.py:23: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\zxzxa\\AppData\\Local\\Temp\\ipykernel_11448\\2225185633.py:23: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  result = pandas.read_sql(sql,connection)\n"
      ]
     }
@@ -408,9 +410,6 @@
     "columns = [item[0] for item in cursor.description]\n",
     "\n",
     "print(columns)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   }
